@@ -5,38 +5,31 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.1</version>
+    <version>3.3.2</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>muni.fi.cz.jobportal</groupId>
   <artifactId>jobportal</artifactId>
-  <version>0.0.3-SNAPSHOT</version>
+  <version>0.0.4-SNAPSHOT</version>
   <name>jobportal</name>
-  <description>Bachelor Thesis Web Application Job Portal</description>
+  <description>Web Application Job Portal</description>
 
   <properties>
-    <java.version>17</java.version>
+    <java.version>21</java.version>
     <springdoc.version>1.6.9</springdoc.version>
     <org.mapstruct.version>1.5.2.Final</org.mapstruct.version>
-    <hibernate.search.version>6.1.5.Final</hibernate.search.version>
+    <hibernate.search.version>7.1.1.Final</hibernate.search.version>
   </properties>
 
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.testcontainers</groupId>
-        <artifactId>testcontainers-bom</artifactId>
-        <version>1.17.3</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
 
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-oauth2-client</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-autoconfigure</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -72,7 +65,7 @@
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-validator</artifactId>
-      <version>6.0.10.Final</version>
+      <version>8.0.0.Final</version>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
@@ -85,6 +78,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-properties-migrator</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-test</artifactId>
       <scope>test</scope>
@@ -92,7 +90,7 @@
     <dependency>
       <groupId>org.zalando</groupId>
       <artifactId>problem-spring-web</artifactId>
-      <version>0.28.0-RC.0</version>
+      <version>0.29.1</version>
     </dependency>
     <dependency>
       <groupId>com.google.api-client</groupId>
@@ -107,7 +105,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-tx</artifactId>
-      <version>5.3.17</version>
+      <version>6.1.11</version>
     </dependency>
     <dependency>
       <groupId>org.liquibase</groupId>
@@ -147,10 +145,6 @@
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-thymeleaf</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-mail</artifactId>
     </dependency>
     <dependency>
@@ -174,16 +168,20 @@
     <dependency>
       <groupId>org.mapstruct</groupId>
       <artifactId>mapstruct</artifactId>
-      <version>1.5.2.Final</version>
+      <version>1.5.5.Final</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-thymeleaf</artifactId>
     </dependency>
     <dependency>
       <groupId>org.thymeleaf</groupId>
-      <artifactId>thymeleaf-spring5</artifactId>
+      <artifactId>thymeleaf-spring6</artifactId>
     </dependency>
     <dependency>
       <groupId>com.itextpdf</groupId>
       <artifactId>itextpdf</artifactId>
-      <version>5.5.13.3</version>
+      <version>5.5.13.4</version>
     </dependency>
     <dependency>
       <groupId>com.itextpdf</groupId>
@@ -194,6 +192,21 @@
       <groupId>com.neovisionaries</groupId>
       <artifactId>nv-i18n</artifactId>
       <version>1.29</version>
+    </dependency>
+    <dependency>
+      <groupId>io.swagger.core.v3</groupId>
+      <artifactId>swagger-annotations</artifactId>
+      <version>2.2.22</version>
+    </dependency>
+    <dependency>
+      <groupId>org.thymeleaf.extras</groupId>
+      <artifactId>thymeleaf-extras-java8time</artifactId>
+      <version>3.0.4.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.zalando</groupId>
+      <artifactId>jackson-datatype-problem</artifactId>
+      <version>0.26.0</version>
     </dependency>
   </dependencies>
 
@@ -251,7 +264,7 @@
                 <version>${org.mapstruct.version}</version>
               </path>
               <path>
-                <groupId>org.hibernate</groupId>
+                <groupId>org.hibernate.orm</groupId>
                 <artifactId>hibernate-jpamodelgen</artifactId>
                 <version>${hibernate.version}</version>
               </path>
@@ -263,6 +276,7 @@
               <arg>
                 -Amapstruct.defaultInjectionStrategy=constructor
               </arg>
+              <arg>--enable-preview</arg>
             </compilerArgs>
           </configuration>
         </plugin>
@@ -274,7 +288,7 @@
             <dependency>
               <groupId>io.swagger.core.v3</groupId>
               <artifactId>swagger-annotations</artifactId>
-              <version>2.1.2</version>
+              <version>2.2.22</version>
             </dependency>
           </dependencies>
         </plugin>
@@ -300,7 +314,7 @@
           </executions>
           <dependencies>
             <dependency>
-              <groupId>org.hibernate</groupId>
+              <groupId>org.hibernate.orm</groupId>
               <artifactId>hibernate-jpamodelgen</artifactId>
               <version>${hibernate.version}</version>
             </dependency>
